# iathena

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docs.yml
cmake/: variables.cmake  version.cmake
docs/: CMakeLists.txt  Doxyfile  doxyfile.in  index.html
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5
includes/: CMakeLists.txt  author.hpp  author.hpp.in  constants.hpp  move.hpp  position.hpp  types.hpp  utils.hpp  variables.hpp
social/: github_social_card.xcf
social/images_sources/: iathena_twitter_profil.xcf
src/: CMakeLists.txt  bb.hpp  bb_normal_moves.cpp  bb_util.cpp  board.cpp  board_attack.cpp  board_check.cpp  board_io.cpp  board_makemove.cpp  board_movegen.cpp  engine.hpp  engine_ia.cpp  engine_perft.cpp  main.cpp  move.hpp  position.cpp  position_getters.cpp  position_io.cpp  position_move.cpp  position_setters.cpp  searchinfo.hpp  types.hpp
svg/includes/: CMakeLists.txt  bb.hpp  board.hpp  move.hpp  types.hpp  utils.hpp  utils.hpp.in
svg/src/: bb.cpp  bb_magic_moves.cpp  board_evaluation.cpp  board_io.cpp  engine.cpp  engine_hashtable.cpp  engine_uci.cpp  main.cpp  perft_data.cpp
test/: CMakeLists.txt  test_position.cpp
